log
Fri, May 16, 2025 10:00:48 AM: 
 sudoku.c | 63 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 60 insertions(+), 3 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:126:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Fri, May 16, 2025 10:01:25 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
607cb93
Fri, May 16, 2025 10:18:33 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
e1df7d2
Fri, May 16, 2025 10:50:11 AM: 
 sudoku.c | 42 ++++++++++++++++++++++++------------------
 1 file changed, 24 insertions(+), 18 deletions(-)
 tests:  7|1
total_score: 55/70
cd2cd2c
Fri, May 16, 2025 11:10:51 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
6cd3e1e
Fri, May 16, 2025 12:28:31 PM: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:142:21: error: implicit declaration of function 'frist' [-Werror=implicit-function-declaration]
     Node *adjNode = frist(adj) ;
                     ^~~~~
sudoku.c:142:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
c5fed5d
Fri, May 16, 2025 12:28:48 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
47f3327
